--- a/src/css/aula06.css
+++ b/src/css/aula06.css
@@ -9,12 +9,24 @@ body{font: 14px;}
     color: 000;
 }
 
-p {
+p  {
     width: 480px;
     padding: 5px;
     background: #000;
     margin: 0 auto;
     text-align: center;
+    color: #fff;
+    border: 5px solid #ccc;
+    margin-top: 10px;
+}
+
+input {
+    width: 100%;
+    max-width: 480px;
+    padding: 5px;
+    background: #ccc;
+    margin-left: 402px;
+    
     color: #fff;
     border: 5px solid #ccc;
     margin-top: 10px;
