--- a/src/css/aula07.css
+++ b/src/css/aula07.css
@@ -14,15 +14,18 @@ label {
     margin:10px 0;
     padding: 10px;
     background: #f8f8ff;
+    text-align: center;
 
 }
 
 input, textarea {
     padding: 5px;
     width: 450px;
+    text-align: center;
 
 }
 
 button {
     width: 465px;
+    text-align: center;
 }
