--- a/src/css/aula06.css
+++ b/src/css/aula06.css
@@ -24,10 +24,14 @@ input {
     width: 100%;
     max-width: 480px;
     padding: 5px;
-    background: #ccc;
+    background: #000;
     margin-left: 402px;
     
     color: #fff;
     border: 5px solid #ccc;
     margin-top: 10px;
+}
+
+.ev4 {
+    text-align: center;
 }
